tests/neg/infix-then-complex-expr.scala
@main def test = println:
  true
  && // error
  try java.lang.Boolean.valueOf("true")
